terceiro exercício e estilização

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CP4-WEB/RESP</title>
+
+    <style> 
+        * {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        h1 {
+            text-align: center;
+            color: white;
+            background-color: black;
+            padding: 10px;
+        }
+
+    </style>
 </head>
 <body>
     <h1>Início do programa</h1>
