--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
 <body>
     <h1>Início do programa</h1>
 
+    <form id="formulario">
+
+        <label for="usuario">Usuário</label>
+        <input type="text" name="usuario" id="usuario"> <br>
+        
+        <label for="senha">Senha</label>
+        <input type="password" name="senha" id="senha">
+
+        <button type="submit" onclick="Login()">Entrar</button>
+
+    </form>
+
     <script src="script.js"></script>
 </body>
 </html>
