--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 <body>
     <h1>Início do programa</h1>
 
+    <button id="btn1">Clique aqui</button>
+    <p id="clicks1">Fui clicado 0 vezes</p>
+
+    <button id="btn2">Clique aqui</button>
+    <p id="clicks2">Fui clicado 0 vezes</p>
+
     <form id="formulario">
 
         <label for="usuario">Usuário</label>
